@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2022-07-07T01:06:41Z",
+  "timestamp" : "2022-07-07T08:15:02Z",
   "count_outdated" : 377,
   "uniques_outdated" : 204,
-  "count" : 404,
-  "uniques" : 219,
+  "count" : 405,
+  "uniques" : 220,
   "clones" : [
     {
       "timestamp": "2022-06-23T00:00:00Z",
@@ -100,6 +100,13 @@
       "timestamp": "2022-07-06T00:00:00Z",
       "count": 2,
       "count_minmax": [ 1, 2 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ]
+    },
+    {
+      "timestamp": "2022-07-07T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
     }
