@@ -1,5 +1,5 @@
 {
-  "count": 27,
+  "count": 28,
   "uniques": 2,
   "clones": [
     {
@@ -70,6 +70,11 @@
     {
       "timestamp": "2022-07-06T00:00:00Z",
       "count": 2,
+      "uniques": 1
+    },
+    {
+      "timestamp": "2022-07-07T00:00:00Z",
+      "count": 1,
       "uniques": 1
     }
   ]
