@@ -1,3 +1,10 @@
+2022-07-07T08:15:02Z:
+* notice: last 14d: unq all: 2 28
+* notice: prev accum: outdated-unq outdated-all / unq all: 204 377 / 219 404
+* notice: next accum: outdated-unq outdated-all / unq all: 204 377 / 220 405
+* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
+* notice: removed / changed dates: [] / [2022-07-07]
+
 2022-07-07T01:06:41Z:
 * notice: last 14d: unq all: 2 27
 * notice: prev accum: outdated-unq outdated-all / unq all: 204 377 / 219 403
